--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,5 @@ Assets/Project/External/PolygonHorrorMansion/URPExtractMe.unitypackage.meta
 Assets/Project/External/PolygonNature/URP_Extract_Me.unitypackage.meta
 Assets/Project/External/PolygonPrototype/URP_ExtractMe.unitypackage.meta
 Assets/Project/External/PolygonSciFiSpace/URP_ExtractMe.unitypackage.meta
+*.dwlt
+*.meta
