--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,4 @@ Assets/Project/External/PolygonNature/URP_Extract_Me.unitypackage.meta
 Assets/Project/External/PolygonPrototype/URP_ExtractMe.unitypackage.meta
 Assets/Project/External/PolygonSciFiSpace/URP_ExtractMe.unitypackage.meta
 *.dwlt
+CHAN-MASS.git
