--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,18 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Assets/AdvancedPeopleSystem2/
+Assets/Enviro - Sky and Weather/
+Assets/EverydayMotionPack/
+Assets/PolygonFantasyKingdom/
+Assets/PolygonHorrorMansion/
+Assets/PolygonNature/
+Assets/PolygonParticles/
+Assets/PolygonPrototype/
+Assets/PolygonSciFiSpace/
+Assets/PolygonTown/
+Assets/PolygonWesternFrontier/
+Assets/UltimateCleanGUIPack/
 Assets/AdvancedPeopleSystem2/BlenderSources.unitypackage.meta
 Assets/AdvancedPeopleSystem2/Shader_HDRP.unitypackage.meta
 Assets/AdvancedPeopleSystem2/Shader_URP.unitypackage.meta
