--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,8 @@ sysinfo.txt
 *.aab
 *.unitypackage
 *.app
+*.prefab
+
 
 # Crashlytics generated file
 crashlytics-build.properties
@@ -132,3 +134,14 @@ Assets/Project/External/PolygonPrototype/URP_ExtractMe.unitypackage.meta
 Assets/Project/External/PolygonSciFiSpace/URP_ExtractMe.unitypackage.meta
 *.dwlt
 CHAN-MASS.git
+Packages
+ProjectSettings
+UMotionData
+Assets/Material
+Assets/Prefab
+Assets/Resources
+Assets/Samples
+Assets/Saves
+Assets/Scenes
+Assets/TextMesh Pro
+Assets/Textures
