--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,9 @@ sysinfo.txt
 *.unitypackage
 *.app
 *.prefab
-
+*.asset
+*.jpg
+*.png
 
 # Crashlytics generated file
 crashlytics-build.properties
