--- a/.gitignore
+++ b/.gitignore
@@ -64,7 +64,7 @@ sysinfo.txt
 *.prefab
 *.asset
 *.jpg
-*.png
+
 
 # Crashlytics generated file
 crashlytics-build.properties
@@ -104,6 +104,7 @@ Assets/*.meta
 Assets/*.asset
 Assets/*.csv
 Assets/*.txt
+Assets/*.png
 Assets/*.json
 Assets/Download/
 Assets/Graphy - Ultimate Stats Monitor/
